src/tests/snapshots/gitu__tests__cycle_all_sections_to_expanded_from_initial.snap
---
source: src/tests/mod.rs
assertion_line: 512
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 2 commit(s).                          |
                                                                                |
 Unstaged changes (2)                                                           |
 modified   file-one                                                            |
 @@ -1,2 +1 @@                                                                  |
 -asdf                                                                          |
  blahonga                                                                      |
 modified   file-two                                                            |
 @@ -1,2 +1 @@                                                                  |
 -FOO                                                                           |
 -BAR                                                                           |
 +blahonga                                                                      |
                                                                                |
 Recent commits                                                                 |
 e45938a main add file-two                                       Author Name __ |
 b3cf8e8 add file-one                                            Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
styles_hash: d7cfcc7aabff332a
