src/tests/snapshots/gitu__tests__cycle_all_sections_to_headings.snap
---
source: src/tests/mod.rs
assertion_line: 534
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 2 commit(s).                          |
                                                                                |
 Unstaged changes (2)                                                           |
 modified   file-one                                                            |
 @@ -1,2 +1 @@…                                                                 |
 modified   file-two                                                            |
 @@ -1,2 +1 @@…                                                                 |
                                                                                |
 Recent commits                                                                 |
 e45938a main add file-two                                       Author Name __ |
 b3cf8e8 add file-one                                            Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: cb06bb8913b549f
